--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [alias]
 
 	# View abbreviated SHA, description, and history graph of the latest 20 commits
-	l = log --pretty="format:%C(auto)%h%Creset  %ar by %C(bold)%aN%Creset (%G?) - %s" --color -n 20 --graph --abbrev-commit --
+	l = log --pretty=oneline --color -n 20 --graph --abbrev-commit --
 
 	# View the current working tree status using the short format
 	s = status
