--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,9 @@
 
 	# View the current working tree status using the short format
 	s = status
+	
+	# Rebase
+	r = pull --rebase
 
 	# Diff with color
 	df = diff --color --color-words --abbrev
